--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.5.4", features = ["derive"] }
-regex = "1.10.4"
-reqwest = { version = "0.12.2", features = ["blocking"]}
+clap = { version = "4.5", features = ["derive"] }
+regex = "1.10"
+reqwest = { version = "0.12", features = ["blocking"]}
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 rand = "0.8"
 scraper = "0.19"
 rust-crypto = "0.2"
+anyhow = "1"
