--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 regex = "1.10"
-reqwest = { version = "0.12", features = ["blocking"]}
+reqwest = { version = "0.12", features = ["blocking", "cookies"]}
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 rand = "0.8"
