--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 rand = "0.8"
 scraper = "0.19"
-rust-crypto = "0.2"
 anyhow = "1"
 lazy_static="1.4"
 comfy-table = "7.1.0"
+sha2 = "0.10"
