add nijafirewall check

--- a/_typos.toml
+++ b/_typos.toml
@@ -1,4 +1,8 @@
 [default.extend-words]
 
+
 [files]
-extend-exclude = ["CHANGELOG.md", "notebooks/*", "tests/html/*"]
+extend-exclude = ["CHANGELOG.md", "notebooks/*", "tests/html/*", "README.md"]
+
+[default.extend-identifiers]
+NinTechNet = "NinTechNet"
